# mse1h2026-lab-gen

./: .gitignore  Dockerfile  README.md  customer_sync.md  main.py  pipeline.py  pyproject.toml  reports.md  requirements.txt
.github/workflows/: stress.yml  tests.yml
customer_sync/: README.md  Созвон №1 (20.02).md  Созвон №2 (20.03).md  Созвон №3 (06.05).md
docs/: README.md  lab1_concept.md  lab2_concept.md  lab3_concept.md  lab4_concept.md  lab5_concept.md  lab6_concept.md  specification.md
examples/: lab1_solution.c  lab1_solution_base_good.c  lab1_solution_good.c  lab2_solution_bad.txt  lab2_solution_good.c  lab2_solution_good.txt  lab3_solution_good.c  lab4_solution_bad.c  lab4_solution_good.c  lab5_solution_bad.c  lab5_solution_good.c  lab6_solution_bad.c  lab6_solution_good.c  lab_compile.c
lab1_intro/: generate_params.py  generate_tests_from_config.py  pipeline.py  solution.py  solve_first_3_tasks.py
playground/: solve_first_3_tasks.py
prog_labgen/: __init__.py  cli.py
prog_labgen/base_module/: __init__.py  base_cli.py  base_task.py  generators.py
prog_labgen/lab1/: __init__.py  lab1.py  lab1_cli.py  lab1_intro.py  test_lab1.py
prog_labgen/lab1_intro/: lab1_cli.py  lab1_intro.py
prog_labgen/lab2/: __init__.py  lab2.py  lab2_check_text.py  lab2_cli.py  lab2_parser.py  lab2_tests.py  test_lab2.py  tests_lab2.py
scripts/: run_example_checks.py  seed_to_check.txt  stress_generate_variants.py
team_sync/: README.md  Созвон  N2 (20.03).md  Созвон  №2 (20.03).md  Созвон №1 (20.02).md  Созвон №3 (06.05).md
tests/: test_cli_smoke.py
(+13 files in other folders)
